# full-stack-actix-web-crud

./: .gitignore  README.md
.github/: dependabot.yml
api/: Cargo.toml  appsettings-sample.json
api/src/: app_settings.rs  app_state.rs  error.rs  main.rs
api/src/commons/: mod.rs  status_code_const.rs
api/src/dto/: base_res_dto.rs  mod.rs
api/src/features/: mod.rs
api/src/features/auth/: auth_dto.rs  auth_handler.rs  auth_route.rs  mod.rs
api/src/features/health_check/: mod.rs
api/src/features/roles/: mod.rs  roles_dto.rs  roles_entity.rs  roles_handler.rs  roles_repo.rs  roles_route.rs
api/src/features/users/: mod.rs  user_dto.rs  user_entity.rs  user_handler.rs  user_repo.rs  user_req_dto.rs  user_res_dto.rs  user_route.rs
api/src/middleware/: auth.rs  jwt_auth_.rs
api/src/repos/: mod.rs  sql_pool_manager.rs  sql_repo.rs
api/src/swaggers/: mod.rs
api/src/utils/: jwt_util.rs  mod.rs  password_hashing.rs
docs/: Complete Actix-DI Working Project.md  Rust-Sql-Repo.md  You are a senior rust dev, and I want.md  crud-rust.md
web-ui/: package.json
web-ui/src/components/: HelloWorld.vue
