[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-rt = "2.11.0"
actix-session = "0.11.0"
actix-web = "4.11.0"
anyhow = "1.0.99"
argon2 = "0.5.3"
chrono = {version = "0.4.41", features = ["serde"]}
futures = "0.3.31"
indexmap = "2.11.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
log = "0.4.28"
openssl-probe = "0.1.6"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tiberius = {version = "0.12.3", features = ["chrono", "sql-browser-tokio"]}
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
utoipa = {version = "5.4.0", features = ["actix_extras", "chrono"]}
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = {version = "1.18.1", features = ["v4"]}
