[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-rt = "2.11.0"
actix-session = "0.11.0"
actix-web = "4.12.1"
anyhow = "1.0.99"
argon2 = "0.5.3"
chrono = { version = "0.4.42", features = ["serde"] }
domner_tech_sql_client = { version = "0.1.6", features = ["mssql"] }
futures = "0.3.31"
indexmap = "2.12.1"
jsonwebtoken = "10.2.0"
lazy_static = "1.5.0"
log = "0.4.29"
openssl-probe = "0.1.6"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.17"
utoipa = {version = "5.4.0", features = ["actix_extras", "chrono"]}
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = {version = "1.19.0", features = ["v4"]}
